appId: com.atariq.expostarterpack
---
- launchApp
- assertVisible: 'Proje Ofisi'
- assertVisible: 'Aktif projeler'
- tapOn: 'Tümünü gör'
- assertVisible: 'Projeler'
